--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -18,4 +18,13 @@
     <color name="dialog_background">#FFFFFF</color>
     <color name="divider_color">#E1E1E1</color>
 
+    <!-- List selector -->
+    <color name="list_cab_active">#ABCDEF</color>
+    <color name="list_cab_normal">#00000000</color>
+
+    <!-- Download hint color -->
+    <color name="download_success">#99CC00</color>
+    <color name="download_fail">#FF4444</color>
+    <color name="download_progress">#33B5E5</color>
+
 </resources>
