--- a/res/layout/item_download.xml
+++ b/res/layout/item_download.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/list_cab_selector"
-    android:padding="@dimen/list_padding" >
+    android:padding="@dimen/layout_padding" >
 
     <View
         android:id="@+id/download_hint"
@@ -19,8 +19,7 @@
         android:layout_height="60dp"
         android:layout_alignBottom="@+id/download_date"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/download_hint"
-        android:src="@drawable/ic_launcher" />
+        android:layout_toRightOf="@+id/download_hint" />
 
     <TextView
         android:id="@+id/download_name"
@@ -28,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="@dimen/list_padding"
+        android:layout_marginLeft="@dimen/layout_padding"
         android:layout_toRightOf="@+id/download_icon"
         android:ellipsize="end"
         android:singleLine="true"
@@ -66,7 +65,7 @@
         android:layout_toRightOf="@+id/download_date"
         android:ellipsize="end"
         android:gravity="right"
-        android:paddingLeft="@dimen/list_padding"
+        android:paddingLeft="@dimen/layout_padding"
         android:singleLine="true"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/text_color_dark" />
