--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,11 +3,23 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="layout_padding">8dp</dimen>
     <dimen name="list_padding">8dp</dimen>
     <dimen name="text_margin">8dp</dimen>
+    <dimen name="text_padding">8dp</dimen>
 
     <!-- Dialog -->
     <dimen name="dialog_title_padding">8dp</dimen>
     <dimen name="dialog_icon_size">40dp</dimen>
+
+    <!-- NavigationDrawer dimensions -->
+    <dimen name="navigation_drawer_width">240dp</dimen>
+    <dimen name="navigation_drawer_padding">10dp</dimen>
+    <dimen name="navigation_drawer_text_size">18sp</dimen>
+    <dimen name="navigation_drawer_text_padding">5dp</dimen>
+    <dimen name="navigation_drawer_icon">32dp</dimen>
+    <dimen name="navigation_drawer_divider_height">1dp</dimen>
+    <dimen name="navigation_drawer_divider_padding">10dp</dimen>
+    <dimen name="navigation_drawer_divider_margin">5dp</dimen>
 
 </resources>
