--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -7,6 +7,8 @@
     <dimen name="list_padding">8dp</dimen>
     <dimen name="text_margin">8dp</dimen>
     <dimen name="text_padding">8dp</dimen>
+    <dimen name="divider_height">2dp</dimen>
+    <dimen name="divider_margin">4dp</dimen>
 
     <!-- Dialog -->
     <dimen name="dialog_title_padding">8dp</dimen>
