--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="item_padding">8dp</dimen>
     <dimen name="divider_height">2dp</dimen>
     <dimen name="divider_margin">4dp</dimen>
+     <dimen name="folderitem_padding">4dp</dimen>
 
     <!-- Dialog -->
     <dimen name="dialog_title_padding">8dp</dimen>
