Not so energy to after a long week at work and this project itself.

--- a/res/layout/dialog_path.xml
+++ b/res/layout/dialog_path.xml
@@ -13,6 +13,7 @@
         navigationview:label_paddingLeft="4dp"
         navigationview:label_paddingRight="12dp"
         navigationview:label_textStyle="bold"
+        navigationview:nav_background="@drawable/nav_bg"
         navigationview:tab_background="@drawable/navtab_bg" />
 
     <ListView
