--- a/res/menu/menu_sort.xml
+++ b/res/menu/menu_sort.xml
@@ -3,10 +3,10 @@
     tools:context="com.milanix.example.downloader.HomeActivity" >
 
     <item
-        android:id="@+id/action_refresh"
-        android:icon="@drawable/ic_action_refresh_light"
+        android:id="@+id/action_sort"
+        android:icon="@drawable/ic_action_sort_light"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_refresh"/>
+        android:title="@string/action_sort"/>
 
 </menu>
