Download pool size by default the number of cores and max multiplied by 2. Fixed issue with download temp file. Fixed issue with download list callbacks and views based states. Added support for multiple device (Responsive).

--- a/res/layout/item_download.xml
+++ b/res/layout/item_download.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/row_base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/list_cab_selector"
@@ -56,7 +57,7 @@
         android:textColor="@color/text_color_dark" />
 
     <TextView
-        android:id="@+id/download_url"
+        android:id="@+id/download_size"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/download_date"
@@ -69,5 +70,30 @@
         android:singleLine="true"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/text_color_dark" />
+
+    <RelativeLayout
+        android:id="@+id/expand_base"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@+id/download_icon"
+        android:layout_marginTop="@dimen/divider_margin"
+        android:layout_toRightOf="@+id/download_icon"
+        android:paddingBottom="@dimen/item_padding_small"
+        android:paddingLeft="@dimen/layout_padding"
+        android:paddingRight="@dimen/layout_padding"
+        android:paddingTop="@dimen/item_padding_small" >
+
+        <TextView
+            android:id="@+id/download_url"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="Small Text"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </RelativeLayout>
 
 </RelativeLayout>
