--- a/res/layout/dialog_pool.xml
+++ b/res/layout/dialog_pool.xml
@@ -9,8 +9,7 @@
     <SeekBar
         android:id="@+id/tasks_seekbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:max="@integer/max_parallel_download" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tasks_number"
