--- a/res/layout/fragment_download.xml
+++ b/res/layout/fragment_download.xml
@@ -8,10 +8,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <ListView
+    <GridView
         android:id="@+id/downloading_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </ListView>
+        android:layout_height="match_parent"
+        android:horizontalSpacing="@dimen/grid_spacing"
+        android:verticalSpacing="@dimen/grid_spacing"
+        android:numColumns="@integer/grid_column" >
+    </GridView>
 
 </RelativeLayout>
