--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -8,10 +8,12 @@
     <dimen name="text_margin">8dp</dimen>
     <dimen name="text_padding">8dp</dimen>
     <dimen name="item_padding">8dp</dimen>
+    <dimen name="item_padding_small">4dp</dimen>
     <dimen name="divider_height">2dp</dimen>
     <dimen name="divider_margin">4dp</dimen>
     <dimen name="folderitem_padding">4dp</dimen>
     <dimen name="list_radio_size">40dp</dimen>
+    <dimen name="grid_spacing">2dp</dimen>
 
     <!-- Dialog -->
     <dimen name="dialog_title_padding">8dp</dimen>
