--- a/res/drawable/circle_normal.xml
+++ b/res/drawable/circle_normal.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="oval" >
-            <solid android:color="#99DEDEDE" />
+            <solid android:color="#99A6BAFF" />
 
             <size
                 android:height="120dp"
@@ -16,7 +16,7 @@
         android:right="3dp"
         android:top="3dp">
         <shape android:shape="oval" >
-            <solid android:color="#FFFFFF" />
+            <solid android:color="#6889FF" />
 
             <size
                 android:height="120dp"
