Added support for download to be added add wide. Added simple browser. (Do we really need it?) Added navigation drawer for smaller devices.

--- a/res/layout/dialog_path.xml
+++ b/res/layout/dialog_path.xml
@@ -14,8 +14,8 @@
         navigationview:label_paddingLeft="4dp"
         navigationview:label_paddingRight="12dp"
         navigationview:label_textStyle="bold"
-        navigationview:nav_background="@drawable/nav_bg"
-        navigationview:tab_background="@drawable/navtab_bg" />
+        navigationview:nav_background="@drawable/bg_nav"
+        navigationview:tab_background="@drawable/bg_navtab" />
 
     <ListView
         android:id="@+id/list_folder"
