--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -15,6 +15,13 @@
     <dimen name="list_radio_size">40dp</dimen>
     <dimen name="grid_spacing">2dp</dimen>
 
+    <!-- Navigation -->
+    <dimen name="navigation_item_height">46dp</dimen>
+    <dimen name="navigation_drawer_text_size">14sp</dimen>
+    <dimen name="navigation_drawer_text_padding">5dp</dimen>
+    <dimen name="navigation_drawer_divider_padding">5dp</dimen>
+    <dimen name="navigation_icon_padding">5dp</dimen>
+
     <!-- Dialog -->
     <dimen name="dialog_title_padding">8dp</dimen>
     <dimen name="dialog_icon_size">40dp</dimen>
