Added sorting by completion date. Fixed issue with complete/failure notification. Made download state logic robust and added failed reason. Fixed issue with list not refreshing on data change. Fixed issue with byte sized file not being downloaded. (Caused by rounding up to 0 :D)

--- a/res/layout/dialog_sort.xml
+++ b/res/layout/dialog_sort.xml
@@ -21,6 +21,22 @@
         android:drawableLeft="@drawable/ic_icon_dscorder"
         android:padding="@dimen/text_padding"
         android:text="@string/dsc_added" />
+    
+        <RadioButton
+        android:id="@+id/asc_completed"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/list_radio_size"
+        android:drawableLeft="@drawable/ic_icon_ascorder"
+        android:padding="@dimen/text_padding"
+        android:text="@string/asc_completed" />
+
+    <RadioButton
+        android:id="@+id/dsc_completed"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/list_radio_size"
+        android:drawableLeft="@drawable/ic_icon_dscorder"
+        android:padding="@dimen/text_padding"
+        android:text="@string/dsc_completed" />
 
     <RadioButton
         android:id="@+id/asc_size"
