Fixed download progress issue. Fixed issue with callback not being detached.

--- a/res/layout/item_download.xml
+++ b/res/layout/item_download.xml
@@ -90,9 +90,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:text="Small Text"
+            android:ellipsize="marquee"
+            android:singleLine="true"
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </RelativeLayout>
 
