--- a/res/menu/menu_context_downloaded.xml
+++ b/res/menu/menu_context_downloaded.xml
@@ -3,6 +3,12 @@
     tools:context="com.milanix.example.downloader.HomeActivity" >
 
     <item
+        android:id="@+id/action_selectall"
+        android:icon="@drawable/ic_action_selectall_light"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="@string/action_selectall"/>
+    <item
         android:id="@+id/action_delete"
         android:icon="@drawable/ic_action_delete_light"
         android:orderInCategory="100"
