--- a/res/layout/dialog_addnew.xml
+++ b/res/layout/dialog_addnew.xml
@@ -28,9 +28,9 @@
 
         <Button
             android:id="@+id/btn_ok"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@null"
             android:gravity="center"
             android:text="@string/btn_ok"
             android:textAppearance="?android:attr/textAppearanceMedium"
