--- a/res/layout/dialog_addnew.xml
+++ b/res/layout/dialog_addnew.xml
@@ -18,6 +18,30 @@
         <requestFocus />
     </EditText>
 
+    <EditText
+        android:id="@+id/et_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:ems="10"
+        android:hint="@string/addnew_username_hint"
+        android:inputType="text"
+        android:singleLine="true"
+        android:visibility="gone" >
+    </EditText>
+
+    <EditText
+        android:id="@+id/et_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:ems="10"
+        android:hint="@string/addnew_password_hint"
+        android:inputType="text"
+        android:singleLine="true"
+        android:visibility="gone" >
+    </EditText>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
